# blog-plugin

./: .crails  CMakeLists.txt  blog.description.json  package-lock.json  prebuild.sh
app/: main.cpp  renderers.cpp  routes.cpp
app/controllers/: blog.hpp
app/controllers/admin/: blog.hpp
lib/renderers/: blog_plugin_html_renderer.cpp  blog_plugin_html_renderer.hpp  blog_plugin_json_renderer.cpp  blog_plugin_json_renderer.hpp  blog_plugin_rss_renderer.cpp  blog_plugin_rss_renderer.hpp
